# tree-sitter-puppet

./: CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yaml
bindings/c/: tree-sitter-puppet.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_puppet/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: assignments.txt  chaining-arrows.txt  class-in-class.txt  class-parameters.txt  class-with-parameters.txt  class.txt  comments.txt  conditionals.txt  data-structures.txt  data-types.txt  element-reference.txt  expressions-binary.txt  expressions-boolean.txt  expressions-unary.txt  function-call.txt  functions.txt  heredoc.txt  lambda.txt  literal.txt  node-definition.txt  node_definition.txt  regex.txt  resource-collectors.txt  resource-defaults.txt  resource-definition.txt  resource-reference.txt  resource-scope.txt  resource-usage.txt  selector.txt  statement-functions.txt  string-interpolation.txt  strings.txt  type-declaration.txt  virtual-and-exported-resources.txt
